; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_dbgchnl.c_list_channel_CB.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/taskmgr/extr_dbgchnl.c_list_channel_CB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32 }

@LVIF_TEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32*, i8*)* @list_channel_CB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @list_channel_CB(i32 %0, i8* %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca [2 x i32], align 4
  %12 = alloca %struct.TYPE_4__, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = ptrtoint i8* %15 to i32
  store i32 %16, i32* %14, align 4
  %17 = call i32 @memset(%struct.TYPE_4__* %12, i32 0, i32 16)
  %18 = load i32, i32* @LVIF_TEXT, align 4
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  store i32 %18, i32* %19, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 1
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  store i32* %21, i32** %22, align 8
  %23 = load i32, i32* %14, align 4
  %24 = call i32 @ListView_InsertItem(i32 %23, %struct.TYPE_4__* %12)
  store i32 %24, i32* %13, align 4
  %25 = load i32, i32* %13, align 4
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %28

27:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %54

28:                                               ; preds = %4
  %29 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 1
  store i32 0, i32* %29, align 4
  store i32 0, i32* %10, align 4
  br label %30

30:                                               ; preds = %50, %28
  %31 = load i32, i32* %10, align 4
  %32 = icmp slt i32 %31, 4
  br i1 %32, label %33, label %53

33:                                               ; preds = %30
  %34 = load i32*, i32** %8, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %10, align 4
  %38 = shl i32 1, %37
  %39 = and i32 %36, %38
  %40 = icmp ne i32 %39, 0
  %41 = zext i1 %40 to i64
  %42 = select i1 %40, i32 120, i32 32
  %43 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 0
  store i32 %42, i32* %43, align 4
  %44 = load i32, i32* %14, align 4
  %45 = load i32, i32* %13, align 4
  %46 = load i32, i32* %10, align 4
  %47 = add nsw i32 %46, 1
  %48 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0, i64 0
  %49 = call i32 @ListView_SetItemText(i32 %44, i32 %45, i32 %47, i32* %48)
  br label %50

50:                                               ; preds = %33
  %51 = load i32, i32* %10, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %10, align 4
  br label %30

53:                                               ; preds = %30
  store i32 1, i32* %5, align 4
  br label %54

54:                                               ; preds = %53, %27
  %55 = load i32, i32* %5, align 4
  ret i32 %55
}

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @ListView_InsertItem(i32, %struct.TYPE_4__*) #1

declare dso_local i32 @ListView_SetItemText(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
